deploy: 2491c966304c80e4f7d53330b6025cc0ce438131

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@ Currently, I have a wide range of experience in machine learning, mathematical o
 Interests
  Machine Learning Image Processing Operations Research Statistics  Love
  Cat ❤️  ">
-<meta property="og:image" content="https://dai08srhg.github.io/portfolio/img/avatar-icon.png" />
+<meta property="og:image" content="https://dai08srhg.github.io/portfolio/img/icon.png" />
 <meta property="og:url" content="https://dai08srhg.github.io/portfolio/" />
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="HOME 🐈" />
 
   <meta name="twitter:title" content="HOME 🐈" />
   <meta name="twitter:description" content="Biography Hello, my name is Fukushima Daisuke. I am a machine learning engineer and joined MicroAd in 2020 to work on research and development of bid optimization in Real-Time-Bidding for online …">
-  <meta name="twitter:image" content="https://dai08srhg.github.io/portfolio/img/avatar-icon.png" />
+  <meta name="twitter:image" content="https://dai08srhg.github.io/portfolio/img/icon.png" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@@igx63je2" />
   <meta name="twitter:creator" content="@@igx63je2" />
@@ -114,7 +114,7 @@ Interests
       <div class="avatar-container">
         <div class="avatar-img-border">
           <a title="HOME 🐈" href="https://dai08srhg.github.io/portfolio/">
-            <img class="avatar-img" src="https://dai08srhg.github.io/portfolio/img/avatar-icon.png" alt="HOME 🐈" />
+            <img class="avatar-img" src="https://dai08srhg.github.io/portfolio/img/icon.png" alt="HOME 🐈" />
           </a>
         </div>
       </div>
