--- a/public/contents/tech_blog/index.html
+++ b/public/contents/tech_blog/index.html
@@ -195,7 +195,7 @@
 	<div class="container footer__container flex">
 		
 <div class="footer__links">
-	<a class="footer__link" href="/portfolio/post/self_intro/">0. 自己紹介</a> | <a class="footer__link" href="/portfolio/post/biography/">1. 経歴</a> | <a class="footer__link" href="/portfolio/post/publication/">2. 業績・発表</a>
+	<a class="footer__link" href="/portfolio/post/biography/">1. 経歴</a> | <a class="footer__link" href="/portfolio/post/publication/">2. 業績・発表</a>
 </div>
 		<div class="footer__copyright">
 			&copy; 2024 DGSP local group.
