--- a/404.html
+++ b/404.html
@@ -87,20 +87,11 @@
 
 		</div>
 		
-<aside class="sidebar sidebar--left"><div class="widget-search widget">
-	<form class="widget-search__form" role="search" method="get" action="https://google.com/search">
-		<label>
-			<input class="widget-search__field" type="search" placeholder="Suche..." value="" name="q" aria-label="Suche...">
-		</label>
-		<input class="widget-search__submit" type="submit" value="Search">
-		<input type="hidden" name="sitesearch" value="https://dai08srhg.github.io/portfolio/" />
-	</form>
-</div>
+<aside class="sidebar">
 <div class="widget-recent widget">
 	<h4 class="widget__title">Letzte Beiträge</h4>
 	<div class="widget__content">
 		<ul class="widget__list">
-			<li class="widget__item"><a class="widget__link" href="/portfolio/post/self_intro/">0. 自己紹介</a></li>
 			<li class="widget__item"><a class="widget__link" href="/portfolio/post/biography/">1. 経歴</a></li>
 			<li class="widget__item"><a class="widget__link" href="/portfolio/post/publication/">2. 業績・発表</a></li>
 		</ul>
@@ -110,6 +101,12 @@
 <div class="widget-social widget">
 	<h4 class="widget-social__title widget__title">Soziale Netzwerke</h4>
 	<div class="widget-social__content widget__content">
+		<div class="widget-social__item widget__item">
+			<a class="widget-social__link widget__link btn" title="Facebook" rel="noopener noreferrer" href="https://facebook.com/100009883141297" target="_blank">
+				<svg class="widget-social__link-icon icon icon-facebook" width="24" height="24" viewBox="0 0 352 352"><path d="m0 32v288c0 17.5 14.5 32 32 32h288c17.5 0 32-14.5 32-32v-288c0-17.5-14.5-32-32-32h-288c-17.5 0-32 14.5-32 32zm320 0v288h-83v-108h41.5l6-48h-47.5v-31c0-14 3.5-23.5 23.5-23.5h26v-43.5c-4.4-.6-19.8-1.5-37.5-1.5-36.9 0-62 22.2-62 63.5v36h-42v48h42v108h-155v-288z"/></svg>
+				<span>Facebook</span>
+			</a>
+		</div>
 		<div class="widget-social__item widget__item">
 			<a class="widget-social__link widget__link btn" title="LinkedIn" rel="noopener noreferrer" href="https://linkedin.com/in/fukushima-ab" target="_blank">
 				<svg class="widget-social__link-icon icon icon-linkedin" width="24" height="24" viewBox="0 0 352 352"><path d="M0,40v272c0,21.9,18.1,40,40,40h272c21.9,0,40-18.1,40-40V40c0-21.9-18.1-40-40-40H40C18.1,0,0,18.1,0,40z M312,32 c4.6,0,8,3.4,8,8v272c0,4.6-3.4,8-8,8H40c-4.6,0-8-3.4-8-8V40c0-4.6,3.4-8,8-8H312z M59.5,87c0,15.2,12.3,27.5,27.5,27.5 c15.2,0,27.5-12.3,27.5-27.5c0-15.2-12.3-27.5-27.5-27.5C71.8,59.5,59.5,71.8,59.5,87z M187,157h-1v-21h-45v152h47v-75 c0-19.8,3.9-39,28.5-39c24.2,0,24.5,22.4,24.5,40v74h47v-83.5c0-40.9-8.7-72-56.5-72C208.5,132.5,193.3,145.1,187,157z M64,288h47.5 V136H64V288z"/></svg>
@@ -126,13 +123,24 @@
 		
 	</div>
 </div>
+<div class="widget-taglist widget">
+	<h4 class="widget__title">Tags</h4>
+	<div class="widget__content">
+		<a class="widget-taglist__link widget__link btn" href="/portfolio/tags/computer-vision/" title="Computer Vision">Computer Vision</a>
+		<a class="widget-taglist__link widget__link btn" href="/portfolio/tags/golang/" title="Golang">Golang</a>
+		<a class="widget-taglist__link widget__link btn" href="/portfolio/tags/machine-learning/" title="Machine Learning">Machine Learning</a>
+		<a class="widget-taglist__link widget__link btn" href="/portfolio/tags/material-infomatics/" title="Material Infomatics">Material Infomatics</a>
+		<a class="widget-taglist__link widget__link btn" href="/portfolio/tags/medical-image/" title="Medical Image">Medical Image</a>
+		<a class="widget-taglist__link widget__link btn" href="/portfolio/tags/python/" title="Python">Python</a>
+	</div>
+</div>
 </aside>
 	</div>
 	<footer class="footer">
 	<div class="container footer__container flex">
 		
 <div class="footer__links">
-	<a class="footer__link" href="/portfolio/post/self_intro/">0. 自己紹介</a> | <a class="footer__link" href="/portfolio/post/biography/">1. 経歴</a> | <a class="footer__link" href="/portfolio/post/publication/">2. 業績・発表</a>
+	<a class="footer__link" href="/portfolio/post/biography/">1. 経歴</a> | <a class="footer__link" href="/portfolio/post/publication/">2. 業績・発表</a>
 </div>
 		<div class="footer__copyright">
 			&copy; 2024 DGSP local group.
