--- a/public/index.html
+++ b/public/index.html
@@ -10,19 +10,19 @@
 	<meta name="description" content="Welcome to my site!">
 		
 		<meta property="og:url" content="http://localhost:1313/portfolio/">
-  <meta property="og:description" content="自己紹介 氏名：福島大祐 生年月日：1995-07-13 統計学, 材料工学, 機械学習全般に興味があります.
+  <meta property="og:description" content="自己紹介 氏名：福島大祐 (Fukushima Daisuke) 生年月日：1995-07-13 統計学, 材料工学, 機械学習全般に興味があります.
 猫が好きです.">
   <meta property="og:locale" content="de">
   <meta property="og:type" content="website">
 
 		
-  <meta itemprop="description" content="自己紹介 氏名：福島大祐 生年月日：1995-07-13 統計学, 材料工学, 機械学習全般に興味があります.
+  <meta itemprop="description" content="自己紹介 氏名：福島大祐 (Fukushima Daisuke) 生年月日：1995-07-13 統計学, 材料工学, 機械学習全般に興味があります.
 猫が好きです.">
-  <meta itemprop="wordCount" content="7">
+  <meta itemprop="wordCount" content="9">
 		
 		
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:description" content="自己紹介 氏名：福島大祐 生年月日：1995-07-13 統計学, 材料工学, 機械学習全般に興味があります.
+  <meta name="twitter:description" content="自己紹介 氏名：福島大祐 (Fukushima Daisuke) 生年月日：1995-07-13 統計学, 材料工学, 機械学習全般に興味があります.
 猫が好きです.">
 
 
@@ -43,7 +43,7 @@
 						<img class="logo__img" src="/portfolio/img/IMG_1612.PNG">
 					</div><div class="logo__item logo__text">
 						<div class="logo__title">D. Fukushima</div>
-						<div class="logo__tagline">Welcome to my site!</div>
+						<div class="logo__tagline">Welcome to my site! 🐈‍⬛</div>
 					</div>
 			</a>
 		</div>
@@ -84,7 +84,7 @@
 	<div class="content main__content clearfix">
 		<h3 id="自己紹介">自己紹介</h3>
 <ul>
-<li>氏名：福島大祐</li>
+<li>氏名：福島大祐 (Fukushima Daisuke)</li>
 <li>生年月日：1995-07-13</li>
 </ul>
 <p>統計学, 材料工学, 機械学習全般に興味があります.<br>
@@ -110,12 +110,12 @@
 	<div class="content list__excerpt post__content clearfix">
 		<h6 id="職歴">職歴</h6>
 <ul>
-<li><strong>SUPWAT, inc.</strong> (2023-01 ~)
+<li><a href="https://www.supwat.com/"><strong>SUPWAT, inc.</strong></a> (2023-01 ~)
 <ul>
 <li>機械学習エンジニア</li>
 </ul>
 </li>
-<li><strong>MicroAd, inc.</strong> (2020-04 ~)
+<li><a href="https://www.microad.co.jp/"><strong>MicroAd, inc.</strong></a> (2020-04 ~)
 <ul>
 <li>機械学習エンジニア</li>
 <li>データサイエンスユニット・マネージャー</li>
@@ -126,9 +126,9 @@
 <h6 id="学歴">学歴</h6>
 <ul>
 <li>名古屋工業大学大学院 工学研究科 情報工学専攻 (2018-04 ~ 2020-03)<br>
-博士前期課程修了：修士（工学）</li>
+博士前期課程修了：修士 (工学)</li>
 <li>金沢大学 理工学域 電子情報学類 (2014-04 ~ 2018-03)<br>
-卒業：学士(理学)</li>
+卒業：学士 (理学)</li>
 </ul>
 	</div>
 </article>
