--- a/index.html
+++ b/index.html
@@ -10,20 +10,17 @@
 	<meta name="description" content="Welcome to my site!">
 		
 		<meta property="og:url" content="https://dai08srhg.github.io/portfolio/">
-  <meta property="og:description" content="自己紹介 氏名：福島大祐 (Fukushima Daisuke) 生年月日：1995-07-13 統計学, 材料工学, 機械学習全般に興味があります.
-猫が好きです.">
+  <meta property="og:description" content="自己紹介 氏名：福島大祐 (Fukushima Daisuke) 生年月日：1995-07-13 猫好きなデータサイエンティストです．統計学, 材料工学, 機械学習全般に興味があります.">
   <meta property="og:locale" content="de">
   <meta property="og:type" content="website">
 
 		
-  <meta itemprop="description" content="自己紹介 氏名：福島大祐 (Fukushima Daisuke) 生年月日：1995-07-13 統計学, 材料工学, 機械学習全般に興味があります.
-猫が好きです.">
-  <meta itemprop="wordCount" content="9">
+  <meta itemprop="description" content="自己紹介 氏名：福島大祐 (Fukushima Daisuke) 生年月日：1995-07-13 猫好きなデータサイエンティストです．統計学, 材料工学, 機械学習全般に興味があります.">
+  <meta itemprop="wordCount" content="8">
 		
 		
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:description" content="自己紹介 氏名：福島大祐 (Fukushima Daisuke) 生年月日：1995-07-13 統計学, 材料工学, 機械学習全般に興味があります.
-猫が好きです.">
+  <meta name="twitter:description" content="自己紹介 氏名：福島大祐 (Fukushima Daisuke) 生年月日：1995-07-13 猫好きなデータサイエンティストです．統計学, 材料工学, 機械学習全般に興味があります.">
 
 
 	<link rel="stylesheet" href="/portfolio/css/style.css">
@@ -88,8 +85,7 @@
 <li>氏名：福島大祐 (Fukushima Daisuke)</li>
 <li>生年月日：1995-07-13</li>
 </ul>
-<p>統計学, 材料工学, 機械学習全般に興味があります.<br>
-猫が好きです.</p>
+<p>猫好きなデータサイエンティストです．統計学, 材料工学, 機械学習全般に興味があります.</p>
 <hr>
 
 	</div><article class="list__item post">
@@ -123,7 +119,7 @@
 </ul>
 </li>
 </ul>
-<p><img src="img/ma_sup.png" alt="代替テキスト"></p>
+<p><img src="img/ma_sup.png" alt="企業ロゴ"></p>
 <h6 id="学歴">学歴</h6>
 <ul>
 <li>名古屋工業大学大学院 工学研究科 情報工学専攻 (2018-04 ~ 2020-03)<br>
