deploy: 48abb007d1db83991f69589284a25abbc13eea06

--- a/contents/qiita/index.html
+++ b/contents/qiita/index.html
@@ -18,7 +18,7 @@
 		
   <meta itemprop="name" content="Qiita">
   <meta itemprop="description" content="description">
-  <meta itemprop="wordCount" content="7">
+  <meta itemprop="wordCount" content="8">
 		
 		
   <meta name="twitter:card" content="summary">
@@ -67,7 +67,7 @@
 			<li class="menu__item">
 				<a class="menu__link" href="/portfolio/contents/">
 					
-					<span class="menu__text">Contents</span>
+					<span class="menu__text">TechContents</span>
 					
 				</a>
 			</li>
@@ -100,7 +100,8 @@
 	</div>
 </div>
 <div class="content post__content clearfix">
-			<p>
+			<p>個人アカウントで運用しているものです.
+
 
 <iframe src="https://hatenablog-parts.com/embed?url=https%3a%2f%2fqiita.com%2fdai08srhg"
     width="100%"
@@ -126,6 +127,12 @@
 		<a class="pager__link" href="/portfolio/contents/tech_blog/" rel="prev">
 			<span class="pager__subtitle">«&thinsp;Zurück</span>
 			<p class="pager__title">技術ブログ</p>
+		</a>
+	</div>
+	<div class="pager__item pager__item--next">
+		<a class="pager__link" href="/portfolio/contents/oss_contribution/" rel="next">
+			<span class="pager__subtitle">Weiter&thinsp;»</span>
+			<p class="pager__title">OSS Contribution</p>
 		</a>
 	</div>
 </nav>
