deploy: b1f31dfe6cd0cbe1d7b0baf268b048ba44690f5e

--- a/contents/oss_contribution/index.html
+++ b/contents/oss_contribution/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html class="no-js" lang="de">
-<head>
+<head><script src="/portfolio/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=portfolio/livereload" data-no-instant defer></script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
 	<script>(function(d,e){d[e]=d[e].replace("no-js","js");})(document.documentElement,"className");</script>
 	<meta name="description" content="description">
 		
-		<meta property="og:url" content="https://dai08srhg.github.io/portfolio/contents/oss_contribution/">
+		<meta property="og:url" content="http://localhost:1313/portfolio/contents/oss_contribution/">
   <meta property="og:title" content="OSS Contribution">
   <meta property="og:description" content="description">
   <meta property="og:locale" content="de">
@@ -31,7 +31,6 @@
 	<link rel="shortcut icon" href="/portfolio/favicon.ico">
 
 	<!---->
-		
 </head>
 <body class="body">
 	<header class="header">
