--- a/public/contents/qiita/index.html
+++ b/public/contents/qiita/index.html
@@ -18,7 +18,7 @@
 		
   <meta itemprop="name" content="Qiita">
   <meta itemprop="description" content="description">
-  <meta itemprop="wordCount" content="8">
+  <meta itemprop="wordCount" content="11">
 		
 		
   <meta name="twitter:card" content="summary">
@@ -111,8 +111,8 @@
 </iframe>
 <strong>最近の投稿</strong></p>
 <ul>
+<li><a href="https://qiita.com/dai08srhg/items/5a7a43a26abd75f88fdf">BoTorch v0.12.0からデフォルトになったDim-scaled log-normal priorについて</a></li>
 <li><a href="https://qiita.com/dai08srhg/items/5d4ac3070bae836aef10">No-U-Turn Sampler (NUTS) を理解したい</a></li>
-<li><a href="https://qiita.com/dai08srhg/items/eb29442f80bf85bcbfdb">BoTorchで自作獲得関数を試す</a></li>
 <li>&hellip;</li>
 </ul>
 
