--- a/public/index.html
+++ b/public/index.html
@@ -106,15 +106,16 @@
 	<div class="content list__excerpt post__content clearfix">
 		<h6 id="職歴">職歴</h6>
 <ul>
-<li><a href="https://www.supwat.com/"><strong>SUPWAT, inc.</strong></a> (2023-01 ~)
+<li><a href="https://www.supwat.com/"><strong>SUPWAT, inc.</strong></a> (2023-01 ~ )
 <ul>
 <li>機械学習エンジニア, リサーチャー</li>
 </ul>
 </li>
-<li><a href="https://www.microad.co.jp/"><strong>MicroAd, inc.</strong></a> (2020-04 ~)
+<li><a href="https://www.microad.co.jp/"><strong>MicroAd, inc.</strong></a> (2020-04 ~ )
 <ul>
 <li>機械学習エンジニア</li>
-<li>データサイエンスユニット・マネージャー</li>
+<li>データサイエンスユニット・マネージャー ( ~ 2024-11)</li>
+<li>業務委託 (2025-01 ~ )</li>
 </ul>
 </li>
 </ul>
