--- a/public/contents/index.html
+++ b/public/contents/index.html
@@ -110,8 +110,8 @@
 </iframe>
 <strong>最近の投稿</strong></p>
 <ul>
+<li><a href="https://qiita.com/dai08srhg/items/5a7a43a26abd75f88fdf">BoTorch v0.12.0からデフォルトになったDim-scaled log-normal priorについて</a></li>
 <li><a href="https://qiita.com/dai08srhg/items/5d4ac3070bae836aef10">No-U-Turn Sampler (NUTS) を理解したい</a></li>
-<li><a href="https://qiita.com/dai08srhg/items/eb29442f80bf85bcbfdb">BoTorchで自作獲得関数を試す</a></li>
 <li>&hellip;</li>
 </ul>
 	</div>
@@ -173,7 +173,16 @@
 </div>
 	</header>
 	<div class="content list__excerpt post__content clearfix">
-		<p>個人的にまとめているものです．<a href="https://juicy-cookie-078.notion.site/ff354caa71fb42f9b196d203c9dcf587?pvs=4">link</a></p>
+		<p>個人的にまとめているものです．</p>
+
+
+<iframe src="https://hatenablog-parts.com/embed?url=https%3a%2f%2fjuicy-cookie-078.notion.site%2fff354caa71fb42f9b196d203c9dcf587%3fpvs%3d4"
+    width="100%"
+    height="200"
+    frameborder="0"
+    allowtransparency="true"
+    allow="encrypted-media">
+</iframe>
 	</div>
 </article>
 
