--- a/contents/paper_db/index.html
+++ b/contents/paper_db/index.html
@@ -100,7 +100,16 @@
 	</div>
 </div>
 <div class="content post__content clearfix">
-			<p>個人的にまとめているものです．<a href="https://juicy-cookie-078.notion.site/ff354caa71fb42f9b196d203c9dcf587?pvs=4">link</a></p>
+			<p>個人的にまとめているものです．</p>
+
+
+<iframe src="https://hatenablog-parts.com/embed?url=https%3a%2f%2fjuicy-cookie-078.notion.site%2fff354caa71fb42f9b196d203c9dcf587%3fpvs%3d4"
+    width="100%"
+    height="200"
+    frameborder="0"
+    allowtransparency="true"
+    allow="encrypted-media">
+</iframe>
 
 		</div>
 	</article>
