deploy: 4336556a207d3ba2705ea2a1c92874b1d3e64aef

--- a/contents/paper_db/index.html
+++ b/contents/paper_db/index.html
@@ -43,7 +43,7 @@
 						<img class="logo__img" src="/portfolio/img/IMG_1612.PNG">
 					</div><div class="logo__item logo__text">
 						<div class="logo__title">D. Fukushima</div>
-						<div class="logo__tagline">Welcome to my site! 🐈‍⬛</div>
+						<div class="logo__tagline">Welcome to my site! 🐈‍⬛🐈</div>
 					</div>
 			</a>
 		</div>
