--- a/contents/tech_blog/index.html
+++ b/contents/tech_blog/index.html
@@ -43,7 +43,7 @@
 						<img class="logo__img" src="/portfolio/img/IMG_1612.PNG">
 					</div><div class="logo__item logo__text">
 						<div class="logo__title">D. Fukushima</div>
-						<div class="logo__tagline">Welcome to my site! 🐈‍⬛</div>
+						<div class="logo__tagline">Welcome to my site! 🐈‍⬛🐈</div>
 					</div>
 			</a>
 		</div>
