--- a/public/contents/qiita/index.html
+++ b/public/contents/qiita/index.html
@@ -18,7 +18,7 @@
 		
   <meta itemprop="name" content="Qiita">
   <meta itemprop="description" content="description">
-  <meta itemprop="wordCount" content="11">
+  <meta itemprop="wordCount" content="13">
 		
 		
   <meta name="twitter:card" content="summary">
@@ -118,6 +118,7 @@
 </iframe>
 最近の投稿⇩</p>
 <ul>
+<li><a href="https://qiita.com/dai08srhg/items/b726fecd2538459a1c2e">BoTorchで制約条件がブラックボックス関数の場合(Objective, Constrainsの利用)</a></li>
 <li><a href="https://qiita.com/dai08srhg/items/5a7a43a26abd75f88fdf">BoTorch v0.12.0からデフォルトになったDim-scaled log-normal priorについて</a></li>
 <li><a href="https://qiita.com/dai08srhg/items/5d4ac3070bae836aef10">No-U-Turn Sampler (NUTS) を理解したい</a></li>
 <li>&hellip;</li>
@@ -197,7 +198,7 @@
 	<a class="footer__link" href="/portfolio/post/biography/">1. 経歴</a> | <a class="footer__link" href="/portfolio/post/publication/">2. 業績・発表</a>
 </div>
 		<div class="footer__copyright">
-			&copy; 2024 DGSP local group.
+			&copy; 2025 DGSP local group.
 			<span class="footer__copyright-credits">Erstellt mit <a href="https://gohugo.io/" rel="nofollow noopener" target="_blank">Hugo</a> und <a href="https://github.com/pfadfinder-konstanz/hugo-dpsg/" rel="nofollow noopener" target="_blank">DPSG</a> Theme.</span>
 			<span><a href="/imprint">Imprint and Privacy</a></span>
 		</div>
