--- a/contents/qiita/index.html
+++ b/contents/qiita/index.html
@@ -137,6 +137,12 @@
 			<p class="pager__title">技術ブログ</p>
 		</a>
 	</div>
+	<div class="pager__item pager__item--next">
+		<a class="pager__link" href="/portfolio/contents/github/" rel="next">
+			<span class="pager__subtitle">Weiter&thinsp;»</span>
+			<p class="pager__title">GitHub</p>
+		</a>
+	</div>
 </nav>
 
 
