--- a/contact/index.html
+++ b/contact/index.html
@@ -101,8 +101,8 @@
 	<h4 class="widget__title">Letzte Beiträge</h4>
 	<div class="widget__content">
 		<ul class="widget__list">
-			<li class="widget__item"><a class="widget__link" href="/portfolio/post/biography/">1. 経歴</a></li>
-			<li class="widget__item"><a class="widget__link" href="/portfolio/post/publication/">2. 業績・発表</a></li>
+			<li class="widget__item"><a class="widget__link" href="/portfolio/post/biography/">経歴</a></li>
+			<li class="widget__item"><a class="widget__link" href="/portfolio/post/publication/">業績・発表</a></li>
 		</ul>
 	</div>
 </div>
@@ -149,7 +149,7 @@
 	<div class="container footer__container flex">
 		
 <div class="footer__links">
-	<a class="footer__link" href="/portfolio/post/biography/">1. 経歴</a> | <a class="footer__link" href="/portfolio/post/publication/">2. 業績・発表</a>
+	<a class="footer__link" href="/portfolio/post/biography/">経歴</a> | <a class="footer__link" href="/portfolio/post/publication/">業績・発表</a>
 </div>
 		<div class="footer__copyright">
 			&copy; 2025 DGSP local group.
