--- a/public/contents/paper_db/index.html
+++ b/public/contents/paper_db/index.html
@@ -141,7 +141,7 @@
 	<div class="container footer__container flex">
 		
 <div class="footer__links">
-	<a class="footer__link" href="/portfolio/post/biography/">1. 経歴</a> | <a class="footer__link" href="/portfolio/post/publication/">2. 業績・発表</a>
+	<a class="footer__link" href="/portfolio/post/biography/">経歴</a> | <a class="footer__link" href="/portfolio/post/publication/">業績・発表</a>
 </div>
 		<div class="footer__copyright">
 			&copy; 2025 DGSP local group.
