deploy: bde5ff4bbf86a81105a745bce086b17b8e4016ed

--- a/contact/index.html
+++ b/contact/index.html
@@ -9,17 +9,17 @@
 	<meta name="description" content="">
 		
 		<meta property="og:url" content="https://dai08srhg.github.io/portfolio/contact/">
-  <meta property="og:description" content="Contact 何か御用がありましたら，FacebookかLinkedinからお願いします．">
+  <meta property="og:description" content="Contact 何か御用がありましたら，FacebookかLinkedInからお願いします．">
   <meta property="og:locale" content="de">
   <meta property="og:type" content="website">
 
 		
-  <meta itemprop="description" content="Contact 何か御用がありましたら，FacebookかLinkedinからお願いします．">
+  <meta itemprop="description" content="Contact 何か御用がありましたら，FacebookかLinkedInからお願いします．">
   <meta itemprop="wordCount" content="2">
 		
 		
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:description" content="Contact 何か御用がありましたら，FacebookかLinkedinからお願いします．">
+  <meta name="twitter:description" content="Contact 何か御用がありましたら，FacebookかLinkedInからお願いします．">
 
 
 	<link rel="stylesheet" href="/portfolio/css/style.css">
@@ -87,7 +87,7 @@
 <main class="main list" role="main">
 	<div class="content main__content clearfix">
 		<h3 id="contact">Contact</h3>
-<p>何か御用がありましたら，FacebookかLinkedinからお願いします．</p>
+<p>何か御用がありましたら，FacebookかLinkedInからお願いします．</p>
 <hr>
 
 	</div>
