--- a/index.html
+++ b/index.html
@@ -10,17 +10,23 @@
 	<meta name="description" content="Welcome to my site!">
 		
 		<meta property="og:url" content="https://dai08srhg.github.io/portfolio/">
-  <meta property="og:description" content="自己紹介 氏名：福島大祐 (Fukushima Daisuke) 生年月日：1995-07-13 猫好きなデータサイエンティストです．統計学, 材料工学, 機械学習全般に興味があります.">
+  <meta property="og:description" content="自己紹介 ◼︎ 氏名：福島大祐 (Fukushima Daisuke)
+◼︎ 生年月日：1995-07-13
+猫好きなデータサイエンティストです．統計学, 材料工学, 機械学習全般に興味があります.">
   <meta property="og:locale" content="de">
   <meta property="og:type" content="website">
 
 		
-  <meta itemprop="description" content="自己紹介 氏名：福島大祐 (Fukushima Daisuke) 生年月日：1995-07-13 猫好きなデータサイエンティストです．統計学, 材料工学, 機械学習全般に興味があります.">
-  <meta itemprop="wordCount" content="8">
+  <meta itemprop="description" content="自己紹介 ◼︎ 氏名：福島大祐 (Fukushima Daisuke)
+◼︎ 生年月日：1995-07-13
+猫好きなデータサイエンティストです．統計学, 材料工学, 機械学習全般に興味があります.">
+  <meta itemprop="wordCount" content="10">
 		
 		
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:description" content="自己紹介 氏名：福島大祐 (Fukushima Daisuke) 生年月日：1995-07-13 猫好きなデータサイエンティストです．統計学, 材料工学, 機械学習全般に興味があります.">
+  <meta name="twitter:description" content="自己紹介 ◼︎ 氏名：福島大祐 (Fukushima Daisuke)
+◼︎ 生年月日：1995-07-13
+猫好きなデータサイエンティストです．統計学, 材料工学, 機械学習全般に興味があります.">
 
 
 	<link rel="stylesheet" href="/portfolio/css/style.css">
@@ -88,10 +94,8 @@
 <main class="main list" role="main">
 	<div class="content main__content clearfix">
 		<h3 id="自己紹介">自己紹介</h3>
-<ul>
-<li>氏名：福島大祐 (Fukushima Daisuke)</li>
-<li>生年月日：1995-07-13</li>
-</ul>
+<p>◼︎ 氏名：福島大祐 (Fukushima Daisuke)<br>
+◼︎ 生年月日：1995-07-13</p>
 <p>猫好きなデータサイエンティストです．統計学, 材料工学, 機械学習全般に興味があります.</p>
 <hr>
 
@@ -112,28 +116,28 @@
 </div>
 	</header>
 	<div class="content list__excerpt post__content clearfix">
-		<h6 id="職歴">職歴</h6>
+		<h6 id="-職歴">◼︎ 職歴</h6>
 <ul>
-<li><a href="https://www.supwat.com/"><strong>SUPWAT, inc.</strong></a>   2023-01 ~ present
+<li><a href="https://www.supwat.com/"><strong>SUPWAT, inc.</strong></a>   2023-01 ~ present<br>
+職種: Researcher, MLエンジニア
 <ul>
-<li>職種: Researcher, MLエンジニア</li>
-<li>プロダクトチーム (2025-01 ~ )</li>
-<li>業務委託 ( ~ 2024-12)</li>
+<li>2025-01 ~ present : プロダクトチーム</li>
+<li>2023-01 ~ 2024-12 : 業務委託</li>
 </ul>
 </li>
 </ul>
 <p><img src="img/log_sup.png" alt="企業ロゴ"></p>
 <ul>
-<li><a href="https://www.microad.co.jp/"><strong>MicroAd, inc.</strong></a>    2020-04 ~ present
+<li><a href="https://www.microad.co.jp/"><strong>MicroAd, inc.</strong></a>    2020-04 ~ present<br>
+職種: MLエンジニア
 <ul>
-<li>職種: MLエンジニア</li>
-<li>データサイエンスユニット・マネージャー ( ~ 2024-11)</li>
-<li>業務委託 (2025-01 ~ )</li>
+<li>2025-01 ~ present : 業務委託</li>
+<li>2020-04 ~ 2024-12 : データサイエンスユニット・マネージャー</li>
 </ul>
 </li>
 </ul>
 <p><img src="img/log_ma.png" alt="企業ロゴ"></p>
-<h6 id="学歴">学歴</h6>
+<h6 id="-学歴">◼︎ 学歴</h6>
 <ul>
 <li>名古屋工業大学大学院 工学研究科 情報工学専攻 (2018-04 ~ 2020-03)<br>
 博士前期課程修了：修士 (工学)</li>
@@ -159,16 +163,17 @@
 </div>
 	</header>
 	<div class="content list__excerpt post__content clearfix">
-		<h6 id="出版物">出版物</h6>
+		<h6 id="-出版物">◼︎ 出版物</h6>
 <ul>
+<li><strong>Daisuke Fukushima</strong>, Yuki, Kurita, <a href="https://www.techrxiv.org/users/949789/articles/1319500-differentiable-subset-selection-for-cardinality-constrained-bayesian-optimization">&ldquo;Differentiable Subset Selection for Cardinality-Constrained Bayesian Optimization&rdquo;, TechRxiv preprint, 2025.</a></li>
 <li>Noriaki Hashimoto, <strong>Daisuke Fukushima</strong>, Ryoichi Koga, Yusuke Takagi, Kaho Ko, Kei Kohno, Masato Nakaguro, Shigeo Nakamura, Hidekata Hontani, Ichiro Takeuchi, <a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Hashimoto_Multi-scale_Domain-adversarial_Multiple-instance_CNN_for_Cancer_Subtype_Classification_with_Unannotated_CVPR_2020_paper.pdf">&ldquo;Multi-scale Domain-adversarial Multiple-instance CNN for Cancer Subtype Classification with Unannotated Histopathological Images&rdquo;, Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR), 2020.</a></li>
 <li><strong>福島大祐</strong>,  古賀諒一,  橋本典明,  黄果葡,  中黒匡人,  高野桂,  中村栄男,  本谷秀堅,  竹内一郎, <a href="https://ken.ieice.org/ken/paper/20190904N1pi/">「ドメイン敵対的マルチインスタンス学習を用いた悪性リンパ腫のサブタイプ分類」, 研究報告コンピュータビジョンとイメージメディア (CVIM), 2019.</a></li>
 </ul>
-<h6 id="受賞">受賞</h6>
+<h6 id="-受賞">◼︎ 受賞</h6>
 <ul>
 <li>2020年度 MI研究奨励賞 (電気通信情報学会　医用画像研究会)</li>
 </ul>
-<h6 id="発表">発表</h6>
+<h6 id="-発表">◼︎ 発表</h6>
 <ul>
 <li>2024-05-29 人工知能学会(JSAI)2024 インダストリアルセッション 「3rd Party Cookie 規制後の広告配信技術」</li>
 <li>2019-09-04 医用画像研究会(MI)「ドメイン敵対的マルチインスタンス学習を用いた悪性リンパ腫のサブタイプ分類」</li>
