--- a/public/contents/qiita/index.html
+++ b/public/contents/qiita/index.html
@@ -106,7 +106,7 @@
 	</div>
 </div>
 <div class="content post__content clearfix">
-			<p>個人アカウントで運用しているものです.
+			<p>個人で運用しているものです.
 
 
 <iframe src="https://hatenablog-parts.com/embed?url=https%3a%2f%2fqiita.com%2fdai08srhg"
@@ -133,7 +133,7 @@
 	<div class="pager__item pager__item--prev">
 		<a class="pager__link" href="/portfolio/contents/tech_blog/" rel="prev">
 			<span class="pager__subtitle">«&thinsp;Zurück</span>
-			<p class="pager__title">技術ブログ</p>
+			<p class="pager__title">Tech Blog</p>
 		</a>
 	</div>
 	<div class="pager__item pager__item--next">
@@ -204,7 +204,7 @@
 	<a class="footer__link" href="/portfolio/post/biography/">経歴</a> | <a class="footer__link" href="/portfolio/post/publication/">業績・発表</a>
 </div>
 		<div class="footer__copyright">
-			&copy; 2025 DGSP local group.
+			&copy; 2026 DGSP local group.
 			<span class="footer__copyright-credits">Erstellt mit <a href="https://gohugo.io/" rel="nofollow noopener" target="_blank">Hugo</a> und <a href="https://github.com/pfadfinder-konstanz/hugo-dpsg/" rel="nofollow noopener" target="_blank">DPSG</a> Theme.</span>
 			<span><a href="/imprint">Imprint and Privacy</a></span>
 		</div>
