deploy: 8870dad36dd049213f9881abde53ea07c37ddd7c

--- a/index.html
+++ b/index.html
@@ -118,17 +118,30 @@
 	<div class="content list__excerpt post__content clearfix">
 		<h6 id="-職歴">◼︎ 職歴</h6>
 <ul>
-<li><a href="https://www.supwat.com/"><strong>SUPWAT, inc.</strong></a>   2023-01 ~ present<br>
+<li><a href="https://goinc.jp/company/"><strong>GO, inc.</strong></a>   2026-01 ~ <strong>present</strong><br>
+職種: MLエンジニア
+<ul>
+<li>2026-01 ~ present : AI技術開発部</li>
+</ul>
+</li>
+</ul>
+<div style="text-align: right;">
+<img src="img/logo_go.png" alt="企業ロゴ" style="width: 10%; max-width: 300px; margin-top: -250px; margin-bottom: 40px; margin-right: 40px;">
+</div>
+<ul>
+<li><a href="https://www.supwat.com/"><strong>SUPWAT, inc.</strong></a>   2023-01 ~ 2025-12<br>
 職種: Researcher, MLエンジニア
 <ul>
-<li>2025-01 ~ present : プロダクトチーム</li>
+<li>2025-01 ~ 2025-12 : プロダクトチーム</li>
 <li>2023-01 ~ 2024-12 : 業務委託</li>
 </ul>
 </li>
 </ul>
-<p><img src="img/log_sup.png" alt="企業ロゴ"></p>
+<div style="text-align: right;">
+<img src="img/logo_supwat.png" alt="企業ロゴ" style="width: 20%; max-width: 300px; margin-top: -250px; margin-bottom: 30px; margin-right: 40px;">
+</div>
 <ul>
-<li><a href="https://www.microad.co.jp/"><strong>MicroAd, inc.</strong></a>    2020-04 ~ present<br>
+<li><a href="https://www.microad.co.jp/"><strong>MicroAd, inc.</strong></a>    2020-04 ~ <strong>present</strong><br>
 職種: MLエンジニア
 <ul>
 <li>2025-01 ~ present : 業務委託</li>
@@ -136,7 +149,9 @@
 </ul>
 </li>
 </ul>
-<p><img src="img/log_ma.png" alt="企業ロゴ"></p>
+<div style="text-align: right;">
+<img src="img/logo_microad.png" alt="企業ロゴ" style="width: 15%; max-width: 300px; margin-top: -170px; margin-bottom: 30px; margin-right: 20px;">
+</div>
 <h6 id="-学歴">◼︎ 学歴</h6>
 <ul>
 <li>名古屋工業大学大学院 工学研究科 情報工学専攻 (2018-04 ~ 2020-03)<br>
@@ -171,7 +186,7 @@
 </ul>
 <h6 id="-受賞">◼︎ 受賞</h6>
 <ul>
-<li>2020年度 MI研究奨励賞 (電気通信情報学会　医用画像研究会)</li>
+<li><a href="https://www.ieice.org/iss/mi/award_list.html">2019年度 MI研究奨励賞</a> (電気通信情報学会　医用画像研究会)</li>
 </ul>
 <h6 id="-発表">◼︎ 発表</h6>
 <ul>
@@ -241,7 +256,7 @@
 	<a class="footer__link" href="/portfolio/post/biography/">経歴</a> | <a class="footer__link" href="/portfolio/post/publication/">業績・発表</a>
 </div>
 		<div class="footer__copyright">
-			&copy; 2025 DGSP local group.
+			&copy; 2026 DGSP local group.
 			<span class="footer__copyright-credits">Erstellt mit <a href="https://gohugo.io/" rel="nofollow noopener" target="_blank">Hugo</a> und <a href="https://github.com/pfadfinder-konstanz/hugo-dpsg/" rel="nofollow noopener" target="_blank">DPSG</a> Theme.</span>
 			<span><a href="/imprint">Imprint and Privacy</a></span>
 		</div>
