--- a/public/contents/index.html
+++ b/public/contents/index.html
@@ -22,6 +22,7 @@
 
 
 	<link rel="stylesheet" href="/portfolio/css/style.css">
+		<link rel="stylesheet" href="/portfolio/css/custom.css">
 		<link rel="alternate" type="application/rss+xml" href="/portfolio/contents/index.xml" title="">
 
 	<link rel="shortcut icon" href="/portfolio/favicon.ico">
