--- a/public/tech/tech_blog/index.html
+++ b/public/tech/tech_blog/index.html
@@ -8,13 +8,13 @@
 	<script>(function(d,e){d[e]=d[e].replace("no-js","js");})(document.documentElement,"className");</script>
 	<meta name="description" content="description">
 		
-		<meta property="og:url" content="http://localhost:1313/portfolio/contents/tech_blog/">
+		<meta property="og:url" content="http://localhost:1313/portfolio/tech/tech_blog/">
   <meta property="og:site_name" content="D.Fukushima">
   <meta property="og:title" content="Tech Blog">
   <meta property="og:description" content="description">
   <meta property="og:locale" content="de">
   <meta property="og:type" content="article">
-    <meta property="article:section" content="contents">
+    <meta property="article:section" content="tech">
 
 		
   <meta itemprop="name" content="Tech Blog">
@@ -181,13 +181,13 @@
 
 <nav class="pager flex">
 	<div class="pager__item pager__item--prev">
-		<a class="pager__link" href="/portfolio/contents/paper_db/" rel="prev">
+		<a class="pager__link" href="/portfolio/tech/paper_db/" rel="prev">
 			<span class="pager__subtitle">«&thinsp;Previous</span>
 			<p class="pager__title">文献DB</p>
 		</a>
 	</div>
 	<div class="pager__item pager__item--next">
-		<a class="pager__link" href="/portfolio/contents/qiita/" rel="next">
+		<a class="pager__link" href="/portfolio/tech/qiita/" rel="next">
 			<span class="pager__subtitle">Next&thinsp;»</span>
 			<p class="pager__title">Qiita</p>
 		</a>
