deploy: 0a8bc4cd3407c18b10e8bf2aee5f90ed18c3ee14

--- a/tech/tech_blog/index.html
+++ b/tech/tech_blog/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
-<head><script src="/portfolio/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=portfolio/livereload" data-no-instant defer></script>
+<head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,13 +8,13 @@
 	<script>(function(d,e){d[e]=d[e].replace("no-js","js");})(document.documentElement,"className");</script>
 	<meta name="description" content="description">
 		
-		<meta property="og:url" content="http://localhost:1313/portfolio/contents/tech_blog/">
+		<meta property="og:url" content="https://dai08srhg.github.io/portfolio/tech/tech_blog/">
   <meta property="og:site_name" content="D.Fukushima">
   <meta property="og:title" content="Tech Blog">
   <meta property="og:description" content="description">
   <meta property="og:locale" content="de">
   <meta property="og:type" content="article">
-    <meta property="article:section" content="contents">
+    <meta property="article:section" content="tech">
 
 		
   <meta itemprop="name" content="Tech Blog">
@@ -33,6 +33,7 @@
 	<link rel="shortcut icon" href="/portfolio/favicon.ico">
 
 	
+		
 </head>
 <body class="body">
 	<header class="header">
@@ -181,13 +182,13 @@
 
 <nav class="pager flex">
 	<div class="pager__item pager__item--prev">
-		<a class="pager__link" href="/portfolio/contents/paper_db/" rel="prev">
+		<a class="pager__link" href="/portfolio/tech/paper_db/" rel="prev">
 			<span class="pager__subtitle">«&thinsp;Previous</span>
 			<p class="pager__title">文献DB</p>
 		</a>
 	</div>
 	<div class="pager__item pager__item--next">
-		<a class="pager__link" href="/portfolio/contents/qiita/" rel="next">
+		<a class="pager__link" href="/portfolio/tech/qiita/" rel="next">
 			<span class="pager__subtitle">Next&thinsp;»</span>
 			<p class="pager__title">Qiita</p>
 		</a>
@@ -225,5 +226,5 @@
 </html>    
     
     
-<script src="http://localhost:1313/portfolio/js/github-repos.js"></script>
+<script src="https://dai08srhg.github.io/portfolio/js/github-repos.js"></script>
 </body>
